--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -11,6 +11,7 @@
 @require 'cool-form-group'
 @require 'btn'
 @require 'bs-table-overwrite'
+@require 'article'
 
 a
     text-decoration none !important
