--- a/src/apps/1688Admin/webapp/merchant-info.pug
+++ b/src/apps/1688Admin/webapp/merchant-info.pug
@@ -7,10 +7,10 @@ block content
                 .page-title 招商信息
             .col-xs-12
                 .box-form.has-title.row-space-10
-                    .box-form-title 综合查询
+                    .box-form-title 查询条件
                     form.row.no-bottom
                         .col-xs-12.col-sm-6
-                            .form-group.cool-form-group.form-group-sm.disabled
+                            .form-group.cool-form-group.form-group-sm
                                 .cool-form-label.text-right.control-label 招商名称：
                                 input.form-control(type="text")
                         .col-xs-12.col-sm-6.col-md-6
@@ -44,9 +44,6 @@ block content
                             .btn.btn-line.btn-small
                                 i.fa.fa-search
                                 |&nbsp;查询
-                            .btn.btn-line.btn-small
-                                i.fa.fa-refresh
-                                |&nbsp;重置
             .col-xs-12
                 .toolbar#toolbar
                     a.btn.btn-theme#toolbtn_new(href="merchant-info-new.html")
@@ -74,6 +71,7 @@ block js
     script(src='../js/bootstrap-table/bootstrap-table-zh-CN.min.js')
     script(src='../js/toastr.min.js')
     script(src='../js/ewin.js')
+    script(src=JS_DIR + 'common.js')
     script(src='../js/app.js')
     script(type='text/javascript').
         $(document).ready(function(){
@@ -137,7 +135,7 @@ block js
                         }, 
                         {
                             field: 'title',
-                            title: '咨询名称',
+                            title: '资讯名称',
                             halign: 'center'
                         }, 
                         {
@@ -161,105 +159,105 @@ block js
                     data: [
                         {
                             id: 1,
-                            title: '咨询名称1',
+                            title: '资讯名称1',
                             state: '已发布',
                             name: '周吴郑',
                             date: '2017.06.23'
                         }, 
                         {
                             id: 2,
-                            title: '咨询名称2',
+                            title: '资讯名称2',
                             state: '审核中',
                             name: '任水寒',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 3,
-                            title: '咨询名称3',
+                            title: '资讯名称3',
                             state: '暂存',
                             name: '苏普',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 4,
-                            title: '咨询名称4',
+                            title: '资讯名称4',
                             state: '审核中',
                             name: '李晟闻',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 5,
-                            title: '咨询名称5',
+                            title: '资讯名称5',
                             state: '审核未通过',
                             name: '岳叔华',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 6,
-                            title: '咨询名称6',
+                            title: '资讯名称6',
                             state: '审核通过',
                             name: '侯善稚',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 7,
-                            title: '咨询名称7',
+                            title: '资讯名称7',
                             state: '审核通过',
                             name: '何望',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 8,
-                            title: '咨询名称8',
+                            title: '资讯名称8',
                             state: '已发布',
                             name: '陈韵瑄',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 9,
-                            title: '咨询名称9',
+                            title: '资讯名称9',
                             state: '审核中',
                             name: '郭武莱',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 10,
-                            title: '咨询名称10',
+                            title: '资讯名称10',
                             state: '已发布',
                             name: '刘飞',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 11,
-                            title: '咨询名称11',
+                            title: '资讯名称11',
                             state: '审核通过',
                             name: '王山崎',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 12,
-                            title: '咨询名称12',
+                            title: '资讯名称12',
                             state: '审核通过',
                             name: '王璐',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 13,
-                            title: '咨询名称13',
+                            title: '资讯名称13',
                             state: '暂存',
                             name: '刘来有',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 14,
-                            title: '咨询名称14',
+                            title: '资讯名称14',
                             state: '已发布',
                             name: '王越建',
                             date: '2017.07.11'
                         }, 
                         {
                             id: 15,
-                            title: '咨询名称15',
+                            title: '资讯名称15',
                             state: '已发布',
                             name: '尚文清',
                             date: '2017.07.11'
@@ -274,12 +272,6 @@ block js
                     //selections = getIdSelections();
                     // push or splice the selections if you want to save all data selections
                 });
-                
-                /*
-                //控制台查看bstable事件详情
-                $table.on('all.bs.table', function (e, name, args) {
-                    console.log(name, args);
-                });*/
                 
                 //删除操作
                 $btn_remove.click(function () {
@@ -349,6 +341,23 @@ block js
                             return;
                         }
                         alert(JSON.stringify(arrselections));
+                        //根据选定的数据信息跳转到对应的编辑页面
+                        window.location.href='merchant-info-edit.html';
+                    }
+                });
+                
+                //审核按钮操作
+                $btn_examine.click(function () {
+                    if(!$(this).attr('disabled')) {
+                        //取表格的选中行数据
+                        var arrselections = $table.bootstrapTable('getSelections');
+                        if (arrselections.length <= 0) {
+                            toastr.warning('请选择有效数据');
+                            return;
+                        }
+                        alert(JSON.stringify(arrselections));
+                        //根据选定的数据信息跳转到对应的审核页面
+                        window.location.href='merchant-info-examine.html';
                     }
                 });
             }
@@ -365,10 +374,7 @@ block js
                 $btn_examine.attr('disabled', $table.bootstrapTable('getSelections').length != 1);
             }
             
-            toastr.options = {
-                closeButton: true,  
-                positionClass: "toast-top-center mt-space"
-            }
+            
             
             setDateTimeInput();
             setBSTable();
