--- a/src/apps/1688Admin/webapp/merchant-info-state.pug
+++ b/src/apps/1688Admin/webapp/merchant-info-state.pug
@@ -1,14 +1,231 @@
 extends layout
 
-
-
 block content
     .container-fluid.row-space-common
-        .row
+        .row.mt-space
             .col-xs-12
-                h2 招商信息状态
+                .page-title 招商信息状态
+            .col-xs-12
+                .toolbar#toolbar
+                    .btn.btn-theme#toolbtn_new
+                        i.fa.fa-plus
+                        |&nbsp;增加状态
+                    .btn.btn-theme#toolbtn_edit
+                        i.fa.fa-edit
+                        |&nbsp;编辑状态
+                    .btn.btn-theme#toolbtn_remove
+                        i.fa.fa-remove
+                        |&nbsp;删除状态
+                table#table
+
                     
+block js
+    script(src='../js/jquery.min.js')
+    script(src='../js/bootstrap.min.js')
+    script(src='../js/moment/moment.min.js')
+    script(src='../js/moment/zh-cn.js')
+    script(src='../js/bootstrap-datetimepicker.min.js')
+    script(src='../js/bootstrap-table/bootstrap-table.min.js')
+    script(src='../js/bootstrap-table/bootstrap-table-zh-CN.min.js')
+    script(src='../js/toastr.min.js')
+    script(src='../js/ewin.js')
+    script(src=JS_DIR + 'common.js')
+    script(src='../js/app.js')
+    script(type='text/javascript').
+        $(document).ready(function(){
+            var $btn_new = $('#toolbtn_new');
+            var $btn_remove = $('#toolbtn_remove');
+            var $btn_edit = $('#toolbtn_edit');
+            var $table = $('#table');
             
+            function getStateNameHtml(stateVal){
+                var sVal = stateVal || "";
+                return "<div class='row-space-10'>" +
+                            "<div class='row no-bottom'>" +
+                                "<div class='col-xs-12'>" +
+                                    "<div class='form-group form-group-sm cool-form-group'>" +
+                                        "<div class='control-label cool-form-label text-right'>状态名称：</div>" +
+                                        "<input class='form-control' type='text' id='state_name' value=" + sVal + ">" +
+                                    "</div>" +
+                                "</div>" +
+                            "</div>" +
+                        "</div>";
+            }
+            
+            //设置bootstrap-table插件
+            function setBSTable() {
+                $table.bootstrapTable({
+                    toolbar : '#toolbar',
+                    showColumns : true,
+                    showToggle : true,
+                    pagination : false,
+                    clickToSelect : true,
+                    columns: [
+                        {
+                            field: 'check',
+                            checkbox: true,
+                            align: 'center',
+                            valign: 'middle'
+                        },
+                        {
+                            field: 'id',
+                            title: '序号',
+                            sortable: true,
+                            halign: 'center',
+                            align: 'right',
+                            width: 30
+                        }, 
+                        {
+                            field: 'state',
+                            title: '状态',
+                            halign: 'center'
+                        }
+                    ],
+                    data: [
+                        {
+                            id: 1,
+                            state: '暂存'
+                        }, 
+                        {
+                            id: 2,
+                            state: '发布'
+                        },
+                        {
+                            id: 3,
+                            state: '审核'
+                        }
+                    ]
+                });
+                
+                setToolBtnDisableState();
+                $table.on('check.bs.table uncheck.bs.table check-all.bs.table uncheck-all.bs.table', function () {
+                    setToolBtnDisableState();
+                });
+                
+                $btn_new.click(function() {
+                    Ewin.confirm({ title:"新增状态", message:getStateNameHtml(), width:"60%", btnok_dismiss:false}).on(function (e, id) {
+                        if (!e) {
+                            return;
+                        }
+                        
+                        //alert($('#'+id).find('#state_name').eq(0).val());
+                        
+                        if($('#'+id).find('#state_name').eq(0).val().length == 0) {
+                            toastr.warning('请输入状态名称');
+                        } else {
+                            $('#'+id).modal('hide');
+                            toastr.success('添加状态成功');
+                            //此处提交状态名称，并刷新表格...
+                        }
+                        
+                    });
+                });
+                
+                //删除操作
+                $btn_remove.click(function() {
+                    //按钮如果不是disabled状态,则可进行操作
+                    if(!$(this).attr('disabled')) {
+                        //取表格的选中行数据
+                        var arrselections = $table.bootstrapTable('getSelections');
+                        if (arrselections.length <= 0) {
+                            toastr.warning('请选择有效数据');
+                            return;
+                        }
+     
+                        Ewin.confirm({ message: "确认要删除选择的数据吗？" }).on(function (e) {
+                            if (!e) {
+                                return;
+                            }
+                            //示例：通过ajax删除数据
+                            /*
+                            $.ajax({
+                                type: "post",
+                                url: "/api/.../delete",//删除数据的api地址
+                                data: { "": JSON.stringify(arrselections) },
+                                success: function (data, status) {
+                                    if (status == "success") {
+                                        toastr.success('删除的数据已提交成功！');
+                                        
+                                        //此处可以直接刷新表格
+                                        $table.bootstrapTable('refresh');
+                                        
+                                        //或者在前端删除对应选中的数据条目，并重新设置工具栏按钮的disabled状态
+                                        var ids = getIdSelections();
+                                        $table.bootstrapTable('remove', {
+                                            field: 'id',
+                                            values: ids
+                                        });
+                                        setToolBtnDisableState();
+                                    }
+                                },
+                                error: function () {
+                                    toastr.error('Error');
+                                },
+                                complete: function () {
+     
+                                }
+                            });*/
+                            
+                            //此处仅是前端演示删除后的效果：删除表格条目，重置工具栏状态，显示删除成功的提示
+                            var ids = getIdSelections();
+                            $table.bootstrapTable('remove', {
+                                field: 'id',
+                                values: ids
+                            });
+                            setToolBtnDisableState();
+                            toastr.success('删除的数据已提交成功！');
+                            
+                        });
+                    }
+                });
+                
+                //编辑按钮操作
+                $btn_edit.click(function () {
+                    if(!$(this).attr('disabled')) {
+                        //取表格的选中行数据
+                        var arrselections = $table.bootstrapTable('getSelections');
+                        if (arrselections.length <= 0) {
+                            toastr.warning('请选择有效数据');
+                            return;
+                        }
+                        
+                        var currentStateName = arrselections[0].state;
+                        
+                        Ewin.confirm({ title:"编辑状态", message:getStateNameHtml(currentStateName), width:"60%", btnok_dismiss:false}).on(function (e, id) {
+                            if (!e) {
+                                return;
+                            }
+                            
+                            if($('#'+id).find('#state_name').eq(0).val().length == 0) {
+                                toastr.warning('请输入状态名称');
+                            } else if($('#'+id).find('#state_name').eq(0).val() == currentStateName) {
+                                toastr.warning('状态名称未修改');
+                            } else {
+                                $('#'+id).modal('hide');
+                                toastr.success('修改状态成功');
+                                //此处提交状态名称，并刷新表格...
+                            }
+                            
+                        });
+                        
+                    }
+                });
+            }
+            
+            function getIdSelections() {
+                return $.map($table.bootstrapTable('getSelections'), function (row) {
+                    return row.id
+                });
+            }
+            
+            function setToolBtnDisableState() {
+                $btn_remove.attr('disabled', !$table.bootstrapTable('getSelections').length);
+                $btn_edit.attr('disabled', $table.bootstrapTable('getSelections').length != 1);
+            }
+
+            setBSTable();
+            
+        });
 
 
 
