1688Admin : reorgenize sys order

--- a/src/apps/1688Admin/webapp/stylus/cool-form-group.styl
+++ b/src/apps/1688Admin/webapp/stylus/cool-form-group.styl
@@ -18,6 +18,19 @@ COOL_FORM_FLUID_SPACE = 0.1rem
     .cool-form-content
         line-height COOL_FORM_LINE_HEIGHT
         color GRAY_33
+        background-color #fbfbfb
+        padding 0 COOL_FORM_LABEL_SPACE
+    .cool-form-image
+        display block
+        height auto
+        box-sizing border-box
+        border 1px solid #cccccc
+        overflow hidden
+        padding 0.04rem
+        img
+            width 100%
+            height auto
+            float left
     .form-control
         border-radius 0
         box-shadow none
