1688admin : merchant pages

--- a/src/apps/1688Admin/webapp/layout.pug
+++ b/src/apps/1688Admin/webapp/layout.pug
@@ -40,5 +40,5 @@ html
             script(src=JS_DIR + 'bootstrapvalidator/zh_CN.js')
             script(src=JS_DIR + 'bootstrap-treeview.min.js')
             script(src=JS_DIR + 'toastr.min.js')
-            script(src=JS_DIR + 'ewin.js')
+            script(src=JS_DIR + 'BSModal.js')
             script(src=JS_DIR + 'app.js')
