--- a/src/apps/1688Admin/webapp/stylus/bs-table-overwrite.styl
+++ b/src/apps/1688Admin/webapp/stylus/bs-table-overwrite.styl
@@ -3,11 +3,16 @@
     border-radius 0
 
 .fixed-table-toolbar
+    .bs-bars
+    .columns
+    .search
+        margin-top 0
     .btn-group
         >.btn-group:last-child
             >.btn
                 border-top-right-radius 0.02rem !important
                 border-bottom-right-radius 0.02rem !important
+
 
 .fixed-table-pagination
     line-height 0
