--- a/src/apps/1688Admin/webapp/stylus/cool-form-group.styl
+++ b/src/apps/1688Admin/webapp/stylus/cool-form-group.styl
@@ -42,6 +42,14 @@ COOL_FORM_FLUID_SPACE = 0.1rem
     .input-group
         .input-group-addon
             border-radius 0 !important
+    .file-input
+        .btn
+            margin-left auto
+            border-radius 0
+            &.btn-file
+                margin-right -1px
+            &.btn-default
+                background-color GRAY_F5
     &.form-group-sm
         .cool-form-label
         .cool-form-content
@@ -52,6 +60,9 @@ COOL_FORM_FLUID_SPACE = 0.1rem
             padding 0.03rem
             &.textarea
                 height auto
+        .file-input
+            .btn
+                padding 0.05rem 0.12rem
     &.cool-form-fluid
         padding 0
         margin-right COOL_FORM_FLUID_SPACE
