--- a/src/apps/1688Admin/webapp/stylus/index.styl
+++ b/src/apps/1688Admin/webapp/stylus/index.styl
@@ -12,6 +12,7 @@
 @require 'btn'
 @require 'bs-table-overwrite'
 @require 'article'
+@require 'file-input-overwrite'
 
 a
     text-decoration none !important
