--- a/src/apps/1688Admin/webapp/index-merchant.pug
+++ b/src/apps/1688Admin/webapp/index-merchant.pug
@@ -88,13 +88,31 @@ block js
                             title : "企业信息",
                             icon_class : "fa fa-clipboard",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='merchant-co-info.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='merchant-orginfo.html'"
+                        },
+                        {
+                            title : "企业信息录入",
+                            icon_class : "fa fa-plus-square",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='merchant-orginfo-new.html'"
+                        },
+                        {
+                            title : "意向企业信息录入",
+                            icon_class : "fa fa-plus-square",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='merchant-orginfo-new-intent.html'"
+                        },
+                        {
+                            title : "未签约企业信息录入",
+                            icon_class : "fa fa-plus-square",
+                            selected : false,
+                            btn_props : "data-toggle='iframelinker' data-link='merchant-orginfo-new-nosign.html'"
                         },
                         {
                             title : "企业类别",
                             icon_class : "fa fa-list-alt",
                             selected : false,
-                            btn_props : "data-toggle='iframelinker' data-link='merchant-co-cat.html'"
+                            btn_props : "data-toggle='iframelinker' data-link='merchant-orginfo-cat.html'"
                         }
                     ]
                 },
