1688Web : add app icons

--- a/src/apps/1688Web/components/m-app-list/index3.pug
+++ b/src/apps/1688Web/components/m-app-list/index3.pug
@@ -3,40 +3,40 @@
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-blue
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-tingche
+            .app-title 智慧停车
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-green-jungle
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-meishi
+            .app-title 园区美食
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-red-orange
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-huiyishi
+            .app-title 会议室租赁
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-purple-studio
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-zhanting
+            .app-title 展厅租赁
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-yellow-crusta
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-wuye
+            .app-title 智慧物业
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-red-sunglo
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-suqiu
+            .app-title 企业诉求
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-blue-ocean
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-zhaopin
+            .app-title 企业招聘
         .col-xs-3
             .abs-container.abs-hp-1of1
                 .abs-content.app-icon-box.touch-active.bg-red-pink
-                    //i.fa.fa-th
-            .app-title 服务名称
+                    i.iconfont.icon-qitafuwu
+            .app-title 其他服务
