--- a/src/apps/1688Web/components/m-footnav/index.pug
+++ b/src/apps/1688Web/components/m-footnav/index.pug
@@ -1,21 +1,16 @@
 .footbar.row-space-0
     .footbar-content.row
-        .col-xs-3
+        .col-xs-4
             .footbar-btn.touch-active.sel
                 .footbar-btn-icon
                     i.iconfont.icon-shouye
                 .footbar-btn-text 首页
-        .col-xs-3
+        .col-xs-4
             .footbar-btn.touch-active
                 .footbar-btn-icon
-                    i.iconfont.icon-zixun1
-                .footbar-btn-text 资讯
-        .col-xs-3
-            .footbar-btn.touch-active
-                .footbar-btn-icon
-                    i.iconfont.icon-ermai
-                .footbar-btn-text 服务
-        .col-xs-3
+                    i.iconfont.icon-yuanqu
+                .footbar-btn-text 园区
+        .col-xs-4
             .footbar-btn.touch-active
                 .footbar-btn-icon
                     i.iconfont.icon-yonghu
