--- a/src/apps/1688Web/webapp/stylus/iconfont.styl
+++ b/src/apps/1688Web/webapp/stylus/iconfont.styl
@@ -13,6 +13,10 @@
 
 .icon-zixun:before { content: "\e600"; }
 
+.icon-qitafuwu:before { content: "\e60e"; }
+
+.icon-huiyishi:before { content: "\e60d"; }
+
 .icon-hr:before { content: "\e79d"; }
 
 .icon-falv:before { content: "\e627"; }
@@ -31,17 +35,29 @@
 
 .icon-kongjian:before { content: "\e607"; }
 
+.icon-suqiu:before { content: "\e604"; }
+
 .icon-peixun2:before { content: "\e602"; }
 
 .icon-rongzi:before { content: "\e649"; }
 
 .icon-fudao:before { content: "\e6b5"; }
 
+.icon-zhanting:before { content: "\e606"; }
+
 .icon-peixun:before { content: "\e60b"; }
+
+.icon-zhaopin:before { content: "\e60c"; }
+
+.icon-meishi:before { content: "\e605"; }
 
 .icon-zhuanli:before { content: "\e689"; }
 
 .icon-qita:before { content: "\e603"; }
+
+.icon-tingche:before { content: "\e679"; }
+
+.icon-yuanqu:before { content: "\e687"; }
 
 .icon-yonghu:before { content: "\e6b3"; }
 
@@ -50,3 +66,5 @@
 .icon-ermai:before { content: "\e72f"; }
 
 .icon-zixun1:before { content: "\e730"; }
+
+.icon-wuye:before { content: "\e770"; }
